# django-vs-fastapi-benchmark

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
benchmark-results/: django-sweep-result.json  fastapi-sweep-result.json
django-app/: Dockerfile
django-app/chat/: urls.py  views.py
django-app/config/: settings.py
eval/: cli.py  human_format.py  util.py
fastapi-app/: Dockerfile  server.py
results-dashboard/: app.py
results-dashboard/.streamlit/: config.toml
